--- a/Entrega I/Serialismo-matematicas.css
+++ b/Entrega I/Serialismo-matematicas.css
@@ -2,10 +2,12 @@
 /* start css.sty */
 .cmr-10{font-size:90%;}
 .cmr-10x-x-109{}
+.musix-13{font-size:109%;}
 .cmr-17{font-size:154%;}
 .cmr-12{font-size:109%;}
 .cmr-8{font-size:72%;}
 .cmmi-8{font-size:72%;font-style: italic;}
+.cmsy-8{font-size:72%;}
 .cmti-10x-x-109{ font-style: italic;}
 .cmtt-10x-x-109{font-family: monospace;}
 .cmbx-10x-x-109{ font-weight: bold;}
